Add ZstdTest